# mysimplehttp

./: setup.cfg
src/mysimplehttp/: api.py  connection.py  exception.py  request.py  response.py
tests/: test_api.py  test_connection.py  test_scheme.py  test_test.py
