[metadata]
name = mysimplehttp
version = 0.0.1
author = Lucas Grando
author_email = lucasmgrando@gmail.com
description = Simple HTTP client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/simplehttp-lucasmgrando
project_urls =
    Bug Tracker = https://github.com/pypa/simplehttp-lucasmgrando/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
